--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-cheese
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Partify</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="viewport" type="text/css" href="theme.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="firebaseInit.js"></script>
+  <script src="anonAuth.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+
+
+
+
+</html>
