--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head ng-app= "main">
+
+<head>
   <title>Partify</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="viewport" type="text/css" href="theme.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="firebaseInit.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCZ3w0ZNgOJrzJW4S8c1mP9D4w5IqgtFLc",
+      authDomain: "voteify.firebaseapp.com",
+      databaseURL: "https://voteify.firebaseio.com",
+      projectId: "voteify",
+      storageBucket: "voteify.appspot.com",
+      messagingSenderId: "1040804533110"
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="anonAuth.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
   <header>
-    <div ng-controller="heading" id="heading">
+    <div ng-app "" id="heading">
 
     </div>
+
   </header>
-
-  <li ng-repeat="songs in queue"id="queue">
-
-  </li>
 
 </body>
 
