--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app"app">
 
 <head>
   <title>Partify</title>
@@ -27,7 +27,7 @@
 
 <body>
   <header>
-    <div ng-app "" id="heading">
+    <div ng-controller "testController" id="heading">
 
     </div>
 
