annon auth is set up

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app"app">
+<html ng-app "app">
 
 <head>
   <title>Partify</title>
@@ -20,6 +20,7 @@
     firebase.initializeApp(config);
   </script>
   <script src="anonAuth.js"></script>
+  <script src="index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
