--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </script>
   <script src="anonAuth.js"></script>
   <script src="index.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -34,6 +34,11 @@
 
   </header>
 
+
+  Party Name:<br>
+  <input type="text" name="partyName" id="partyName"><br>
+  <input type="submit" value="Submit" id="signInButton" onclick="buttonClick()">
+  <p hidden="true" id="invalidParty">Please enter valid party</p>
 </body>
 
 
