auth in main.js

--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-cloak>
+
 <head>
   <title>Partify</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,15 +21,16 @@
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-  <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script> -->
+  <!-- <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script> -->
   <script src="main.js"></script>
 </head>
 
-<body ng-app = "main">
-    <div ng-controller="testController">
-        {{parties}}
-    </div>
+<body ng-app="main">
+  <div ng-controller="testController">
+    {{parties}}
+  </div>
 
 </body>
+
 </html>
