--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-cloak>
+<html>
 
 <head>
   <title>Partify</title>
@@ -24,11 +24,23 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script> -->
   <!-- <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script> -->
   <script src="main.js"></script>
+  <script src="lastfmSearch.js"></script>
 </head>
+<header>
 
-<body ng-app="main">
-  <div ng-controller="testController">
-    {{parties}}
+</header>
+
+<body>
+  <div>
+    <p>
+      Search for a song:
+    </p>
+    <input type="text" name="songName">
+    <a class="btn" value="submit" onclick="httpGet()">Submit</a>
+    <div id="result">
+    </div>
+
+    </form>
   </div>
 
 </body>
