--- a/main.html
+++ b/main.html
@@ -49,6 +49,8 @@
 
 <body>
     <div class="container">
+    <nav class="transparent z-depth-0">
+    <div class="nav-wrapper">
         <form>
             <div class="input-field">
                 <input id="search" type="search" required>
@@ -56,6 +58,8 @@
                 <i class="material-icons">close</i>
             </div>
         </form>
+    </div>
+    </nav>
     </div>
     <div class="container">
         <h2 class="center white-text">Queue</h2>
@@ -105,6 +109,28 @@
 
     </div>
 
+    <div class="container">
+        <!-- Modal Trigger -->
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1" onclick="modalClicked()">Modal</a>
+    </div>
+
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Modal Header</h4>
+            <p>A bunch of text</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
+
+    <div class="container">
+        <a class="waves-effect waves-light btn" onclick="toastClicked()">Toast</a>
+    </div>
+
+
+  <script src="modalandToast.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="materialize.min.js"></script>
   <!--<script src="main.js"></script>-->
