--- a/main.html
+++ b/main.html
@@ -49,13 +49,17 @@
 
 <body>
   <div class="container">
-    <form>
-      <div class="input-field">
-        <input id="search" type="search" required>
-        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-        <i class="material-icons">close</i>
-      </div>
-    </form>
+  <nav class="transparent z-depth-0">
+  <div class="nav-wrapper">
+      <form>
+          <div class="input-field">
+              <input id="search" type="search" required>
+              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <i class="material-icons">close</i>
+          </div>
+      </form>
+  </div>
+  </nav>
   </div>
   <div class="container">
     <h2 class="center white-text" id="headerQueue">Queue</h2>
