--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
     };
     firebase.initializeApp(config);
   </script>
+  <script type="text/javascript" src="lastfmSearch.js"></script>
 </head>
 <header>
   <nav class="teal accent-4 hide-on-med-and-down">
@@ -51,7 +52,7 @@
   <div class="container">
   <nav class="transparent z-depth-0">
   <div class="nav-wrapper">
-      <form>
+      <form onsubmit="httpGet()">
           <div class="input-field">
               <input id="search" type="search" required>
               <label class="label-icon" for="search"><i class="material-icons">search</i></label>
@@ -74,7 +75,9 @@
     <!-- Modal Structure -->
     <div id="modal1" class="modal">
         <div class="modal-content">
+          </div>
             <h4>Results</h4>
+            <div id="result">
             <ul class="collection">
             <li class="collection-item avatar">
                 <img src="images/yuna.jpg" alt="" class="circle">
@@ -122,8 +125,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="materialize.min.js"></script>
   <script src="modalandToast.js"></script>
-  <script src="main.js"></script>
-  <script src="lastfmSearch.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 
 </body>
 
