--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Partify</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,25 +23,25 @@
 </head>
 
 <body>
-    <div>
-      <h1 id="header">Prtify</h1>
+  <div>
+    <h1 id="header">Prtify</h1>
 
 
-      <div class="row">
-        <form class="col s12">
-          <div class="row">
-            <div class="input-field col s4 offset-s4">
-              <input placeholder="Party Name" id="partyName" type="text" class="validate center">
-            </div>
+    <div class="row">
+      <form class="col s12">
+        <div class="row">
+          <div class="input-field col s4 offset-s4">
+            <input placeholder="Party Name" id="partyName" type="text" class="validate center">
           </div>
-         <div class="row">
-            <div class="center">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Enter</button>
-            </div>
-         </div>
-        </form>
-      </div>
+        </div>
+        <div class="row">
+          <div class="center">
+            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="buttonClick()">Enter</button>
+          </div>
+        </div>
+      </form>
     </div>
+  </div>
   <script src="anonAuth.js"></script>
   <script src="index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
