Fixed upvotes and song keys

--- a/main.html
+++ b/main.html
@@ -26,9 +26,9 @@
   <nav class="teal accent-4 hide-on-med-and-down">
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo"><i class="material-icons">stars</i>Prtify</a>
-      <ul class="right hide-on-med-and-down">
+      <!-- <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Leave Party</a></li>
-      </ul>
+      </ul> -->
     </div>
   </nav>
 
@@ -38,9 +38,9 @@
         <div>
           <a href="#!" class="brand-logo"><i class="material-icons">stars</i>Prtify</a>
           <a class='dropdown-button' href='#' data-activates='dropdown1'><i class="material-icons">menu</i></a>
-          <ul id='dropdown1' class='dropdown-content'>
+          <!-- <ul id='dropdown1' class='dropdown-content'>
             <li><a href="#!">Leave Party</a></li>
-          </ul>
+          </ul> -->
         </div>
       </li>
     </ul>
@@ -49,19 +49,19 @@
 
 <body>
   <div class="container">
-      <nav class="transparent z-depth-0">
-          <div class="nav-wrapper">
-              <form>
-                  <div class="input-field col s6 offset-s2">
-                      <input id="search" type="search" required>
-                      <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-                      <i class="material-icons">close</i>
-                  </div>
-              </form>
+    <nav class="transparent z-depth-0">
+      <div class="nav-wrapper">
+        <form>
+          <div class="input-field col s6 offset-s2">
+            <input id="search" type="search" required>
+            <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+            <i class="material-icons">close</i>
           </div>
-      </nav>
+        </form>
+      </div>
+    </nav>
 
-      <button id="searchButton" class="btn waves-effect waves-light center" type="submit" name="action">Search
+    <button id="searchButton" class="btn waves-effect waves-light center" type="submit" name="action">Search
           <i class="material-icons right"></i>
       </button>
   </div>
@@ -70,60 +70,56 @@
     <ul class="collection" id="queue">
     </ul>
   </div>
-    <div class="container">
-        <!-- Modal Trigger -->
-        <a class="waves-effect waves-light btn modal-trigger" href="#modal1" onclick="modalClicked()">Modal</a>
-    </div>
+  <div class="container">
+    <!-- Modal Trigger -->
+    <a class="waves-effect waves-light btn modal-trigger" href="#modal1" onclick="modalClicked()">Modal</a>
+  </div>
 
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-          </div>
-            <h4>Results</h4>
-            <div id="result">
-            <ul class="collection">
-            <li class="collection-item avatar">
-                <img src="images/yuna.jpg" alt="" class="circle">
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle">folder</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle green">insert_chart</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle red">play_arrow</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-        </ul>
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-        </div>
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
     </div>
+    <h4>Results</h4>
+    <div id="result">
+      <ul class="collection">
+        <li class="collection-item avatar">
+          <img src="images/yuna.jpg" alt="" class="circle">
+          <span class="title">Title</span>
+          <p>First Line <br> Second Line
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
+        </li>
+        <li class="collection-item avatar">
+          <i class="material-icons circle">folder</i>
+          <span class="title">Title</span>
+          <p>First Line <br> Second Line
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
+        </li>
+        <li class="collection-item avatar">
+          <i class="material-icons circle green">insert_chart</i>
+          <span class="title">Title</span>
+          <p>First Line <br> Second Line
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
+        </li>
+        <li class="collection-item avatar">
+          <i class="material-icons circle red">play_arrow</i>
+          <span class="title">Title</span>
+          <p>First Line <br> Second Line
+          </p>
+          <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
+        </li>
+      </ul>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+    </div>
+  </div>
 
-    <div class="container">
-        <a class="waves-effect waves-light btn" onclick="toastClicked()">Toast</a>
-    </div>
+  <div class="container">
+    <a class="waves-effect waves-light btn" onclick="toastClicked()">Toast</a>
+  </div>
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="materialize.min.js"></script>
