--- a/main.html
+++ b/main.html
@@ -51,19 +51,16 @@
   <div class="container">
       <nav class="transparent z-depth-0">
           <div class="nav-wrapper">
-              <form>
+              <form action"" method="POST" id="searchForm">
                   <div class="input-field col s6 offset-s2">
-                      <input id="search" type="search" required>
+                      <input id="search" type="search" required autocomplete="off">
                       <label class="label-icon" for="search"><i class="material-icons">search</i></label>
                       <i class="material-icons">close</i>
+                      <input type="submit" form="searchForm" style="display: none" value="submit">
                   </div>
               </form>
           </div>
       </nav>
-
-      <button id="searchButton" class="btn waves-effect waves-light center" type="submit" name="action">Search
-          <i class="material-icons right"></i>
-      </button>
   </div>
   <div class="container">
     <h2 class="center white-text" id="headerQueue">Queue</h2>
@@ -81,40 +78,6 @@
           </div>
             <h4>Results</h4>
             <div id="result">
-            <ul class="collection">
-            <li class="collection-item avatar">
-                <img src="images/yuna.jpg" alt="" class="circle">
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle">folder</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle green">insert_chart</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-            <li class="collection-item avatar">
-                <i class="material-icons circle red">play_arrow</i>
-                <span class="title">Title</span>
-                <p>First Line <br>
-                    Second Line
-                </p>
-                <a href="#!" class="secondary-content"><i class="material-icons">add</i></a>
-            </li>
-        </ul>
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
