--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
   <div class="container">
       <nav class="transparent z-depth-0">
           <div class="nav-wrapper">
-              <form action"" method="POST" id="searchForm">
+              <form action="" method="POST" id="searchForm">
                   <div class="input-field col s6 offset-s2">
                       <input id="search" type="search" required autocomplete="off">
                       <label class="label-icon" for="search"><i class="material-icons">search</i></label>
@@ -72,16 +72,6 @@
     <a class="waves-effect waves-light btn modal-trigger" href="#modal1" onclick="modalClicked()">Modal</a>
   </div>
 
-    <!-- Modal Structure -->
-    <div id="modal1" class="modal">
-        <div class="modal-content">
-          </div>
-            <h4>Results</h4>
-            <div id="result">
-        </div>
-        <div class="modal-footer">
-            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-        </div>
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
@@ -92,10 +82,6 @@
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
     </div>
-  </div>
-
-  <div class="container">
-    <a class="waves-effect waves-light btn" onclick="toastClicked()">Toast</a>
   </div>
 
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
