--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 <body>
   <div>
     <h1 id="header">Prtify</h1>
+    <h6 class="center white-text">Lets everyone have a say in what to play!</h6>
 
 
-    <div class="row">
+    <div class="row" style="padding-top: 100px">
       <form class="col s12">
         <div class="row">
           <div class="input-field col s4 offset-s4">
