--- a/main.html
+++ b/main.html
@@ -67,7 +67,7 @@
   <div id="modal1" class="modal">
     <div class="modal-content">
     </div>
-    <h4>Results</h4>
+    <h4 style="padding-left: 20px">Results</h4>
     <div id="result">
     </div>
     <div class="modal-footer">
