Added create room button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         </div>
         <div class="row">
           <div class="center">
-            <button class="btn waves-effect waves-light" type="submit" name="action" onclick="buttonClick()">Enter</button>
+            <div>
+              <button class="btn waves-effect waves-light" type="submit" name="action" onclick="buttonClick()">Join Party</button>
+            </div>
+            <p class="center white-text">- OR -</p>
+            <div>
+              <button class="btn waves-effect waves-light" type="submit" name="action" onclick="makeNewParty()">Make New Party</button>
+            </div>
           </div>
         </div>
       </form>
