--- a/index.html
+++ b/index.html
@@ -31,18 +31,46 @@
     <div class="row" style="padding-top: 100px">
       <form class="col s12">
         <div class="row">
-          <div class="input-field col s4 offset-s4">
+          <!-- <div class="input-field col s4 offset-s4">
             <input placeholder="Party Name" autocomplete="off" id="partyName" type="text" class="validate center">
-          </div>
+          </div> -->
         </div>
         <div class="row">
+
+          <div id="create-party-modal" class="modal">
+            <div class="modal-content">
+              <h4>Start the Party</h4>
+              <p>Party name: </p>
+              <div class="input-field col s4 offset-s4">
+                <input placeholder="Party Name" autocomplete="off" id="partyName" type="text" class="validate center">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+          </div>
+          <div id="join-party-modal" class="modal">
+            <div class="modal-content">
+              <h4>Join a Party</h4>
+              <p>Party Name:</p>
+              <div class="input-field col s4 offset-s4">
+                  <input placeholder="Party Name" autocomplete="off" id="partyName" type="text" class="validate center">
+                </div>
+            </div>
+            <div class="modal-footer">
+              <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+          </div>
+
           <div class="center">
             <div>
-              <button class="btn waves-effect waves-light" type="submit" name="action" onclick="buttonClick()">Join Party</button>
+              <button class="btn waves-effect waves-light" type="button" name="action" onclick="joinParty()">Join
+                Party</button>
             </div>
             <p class="center white-text">- OR -</p>
             <div>
-              <button class="btn waves-effect waves-light" type="submit" name="action" onclick="makeNewParty()">Make New Party</button>
+              <button class="btn waves-effect waves-light" type="button" name="action" onclick="makeNewParty()">Make
+                New Party</button>
             </div>
           </div>
         </div>
@@ -53,6 +81,7 @@
   <script src="index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="materialize.min.js"></script>
+  <script src="modalandToast.js"></script>
 </body>
 
 
